sas-core/main/default/objects/C_Log__c/C_Log__c.object-meta.xml
<CustomObject>
    <description>Log record to store custom logs from the application</description>
    <label>Log</label>
    <nameField>
        <displayFormat>L-{0000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>