sas-core/main/default/objects/C_Log__c/fields/HttpHeaders__c.field-meta.xml
<CustomField>
    <fullName>HttpHeaders__c</fullName>
    <description>The HTTP headers of logs generated by REST resources.</description>
    <label>HTTP Headers</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>