sas-core/main/default/objects/C_Log__c/fields/HttpRemoteAddress__c.field-meta.xml
<CustomField>
    <fullName>HttpRemoteAddress__c</fullName>
    <description>The IP address connecting to the REST resource.</description>
    <label>HTTP Remote Address</label>
    <length>60</length>
    <type>Text</type>
</CustomField>