sas-core/main/default/objects/C_Log__c/fields/HttpResource__c.field-meta.xml
<CustomField>
    <fullName>HttpResource__c</fullName>
    <description>The HTTP resource of logs generated by REST resources.</description>
    <label>HTTP Resource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>