sas-core/main/default/objects/C_Log__c/fields/LogGroup__c.field-meta.xml
<CustomField>
    <fullName>LogGroup__c</fullName>
    <description>Groups are used to simplify the separation log messages and are set by the caller creating the log record.</description>
    <label>Log Group</label>
    <length>40</length>
    <type>Text</type>
</CustomField>