sas-core/main/default/objects/C_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>The logged message.</description>
    <label>Message</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>