sas-core/main/default/objects/C_Log__c/fields/StackTrace__c.field-meta.xml
<CustomField>
    <fullName>StackTrace__c</fullName>
    <description>The stack trace of the eventual exception which caused the log record.</description>
    <label>Stack Trace</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>