sas-core/main/default/objects/C_Log__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <description>The UUID of the transaction in which the log was recorded.</description>
    <label>Transaction</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>