sas-core/main/default/objects/C_Log__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <description>This is used to identify error occurred for the particular user during SSO</description>
    <label>User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>